# server_client

./: Cargo.toml  README.md  example_expand.rs
examples/: example.rs
server_client_proc_macro/: Cargo.toml
server_client_proc_macro/src/: encapsulated.rs  lib.rs  server_impl.rs
src/: lib.rs
