[package]
name = "server_client"
version = "0.2.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"

[features]
default = ["tokio1"]
tokio02 = ["libtokio02", "async"]
tokio03 = ["libtokio03", "async"]
tokio1 = ["libtokio1", "async"]


async = ["server_client_proc_macro/async"]

[dependencies]
crossbeam-channel = "0.5.0"
avl = "0.6.1"
server_client_proc_macro = {path="./server_client_proc_macro"}
libtokio02 = {version = "0.2", package = "tokio", features = ["sync", "rt-core"], optional = true}
libtokio03 = {version = "0.3", package = "tokio", features = ["sync", "rt"], optional = true}
libtokio1 = {version = "1.0", package = "tokio", features = ["sync", "rt", "time", "macros"], optional = true}