[package]
name = "server_client"
version = "0.2.0"
authors = ["ThePerkinrex <theperkinrex@gmail.com>"]
edition = "2018"

[features]
default = []
tokio02 = ["libtokio02", "async"]
tokio03 = ["libtokio03", "async"]
tokio1 = ["libtokio1", "async"]

# TODO Add possible sync feature
async = ["server_client_proc_macro/async"]
stream = ["futures-core", "futures-util"]

[dependencies]
crossbeam-channel = "0.5"
avl = "0.6"
server_client_proc_macro = {path="./server_client_proc_macro"}
libtokio02 = {version = "0.2", package = "tokio", features = ["sync", "rt-core"], optional = true}
libtokio03 = {version = "0.3", package = "tokio", features = ["sync", "rt", "stream"], optional = true}
libtokio1 = {version = "1", package = "tokio", features = ["sync", "rt", "time", "macros"], optional = true}
futures-core = {version = "0.3", optional = true}
futures-util = {version = "0.3", optional = true}
# tokio03futures = {version = "0.3.8", package = "futures-core", optional = true}
